<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/rug_background"


    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp">
            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/registerUserNameET"
                android:background="@color/lime"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextEmail"
                android:background="@color/lime"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColor="@color/black"/>
            <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextPassword"
                android:background="@color/lime"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColor="@color/black"/>

            <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/registerPasswordAgainET"
                android:background="@color/lime"
                android:padding="8dp"
                android:hint="@string/password_again"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/lime"



                android:text="@string/registration"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirect"
                android:text="@string/bej_fel"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>